--- a/.github/workflows/caller-wf.yml
+++ b/.github/workflows/caller-wf.yml
@@ -10,6 +10,8 @@ permissions:
   contents: read
 
 jobs:
+  call-workflow-passing-date:
+  uses: .github/workflows/automate-readme.yml@main
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
